tests/sksl/errors/golden/StaticIfTest.glsl
### Compilation failed:

Updated & out!
CFG scan!
Updated & out!
CFG scan!
error: 4: static if has non-static test
1 error
